Edits post-analysis code